--- a/packages/torque/configurator.html
+++ b/packages/torque/configurator.html
@@ -3,33 +3,59 @@ Copyright (c) 2003, The Board of Trustees of the University of Illinois. All rig
 Author: Jeremy Enos jenos@ncsa.uiuc.edu
 $Id$
 -->
-<HTML>
-<HEAD><TITLE>Torque Batch System Configuration</TITLE>
-</HEAD>
-<BODY>
-<form>
-<H2>Head node as compute node.</H2>
-For smaller clusters, some admins may wish to use the head node (OSCAR server) as a compute node too.  This is not recommended for larger clusters.
-<P>
-<input type="checkbox" name="compute_on_head" value="YES">  Run batch system client (pbs_mom) on head node
-<P>
-
-<H2>Server log level</H2>
-Each level includes those before it.  Select one:<br>
-<input type="radio" name="loglevel" value="1"> 1 - Error Events<br>
-<input type="radio" name="loglevel" value="2"> 2 - Batch System/Server Events<br>
-<input type="radio" name="loglevel" value="4"> 4 - Administration Events<br>
-<input type="radio" name="loglevel" value="8"> 8 - Job Events<br>
-<input type="radio" name="loglevel" value="16"> 16 - Job Resource Usage<br>
-<input type="radio" name="loglevel" value="32"> 32 - Security Violations<br>
-<input type="radio" name="loglevel" value="64" checked> 64 - Scheduler Calls (recommended, default)<br>
-<input type="radio" name="loglevel" value="128"> 128 - Debug Messages<br>
-<input type="radio" name="loglevel" value="256"> 256 - Extra Debug Messages<br>
-<input type="radio" name="loglevel" value="511"> 511 - Everything On<br>
-<P>
-<input type=reset value='Reset Form'>
-<P>
-</FORM>
-<HR>
-</BODY>
-
+<html>
+<head>
+	<title>Torque Batch System Configuration</title>
+</head>
+<body>
+	<form>
+		<p order="1"><h2>Head node as compute node.</h2></p>
+		<p order="2">
+			For smaller clusters, some admins may wish to use the head node (OSCAR server)
+			as a compute node too.  This is not recommended for larger clusters.
+		</p>
+		<input type="checkbox" name="compute_on_head" value="YES" order="3">  
+			Run batch system client (pbs_mom) on head node
+		</input>
+		<p order="4">
+			<h2>Server log level</h2>
+		</p>
+		<p order="5">
+			Each level includes those before it.  Select one:
+		</p>
+		<input type="radio" name="loglevel" order="6" value="1">
+			1 - Error Events
+		</input> <br />
+		<input type="radio" name="loglevel" order="7" value="2">
+			2 - Batch System/Server Events
+		</input> <br />
+		<input type="radio" name="loglevel" order="8" value="4">
+			4 - Administration Events
+		</input> <br />
+		<input type="radio" name="loglevel" order="9" value="8">
+			8 - Job Events
+		</input> <br />
+		<input type="radio" name="loglevel" order="10" value="16">
+			16 - Job Resource Usage
+		</input> <br />
+		<input type="radio" name="loglevel" order="11" value="32">
+			32 - Security Violations
+		</input> <br />
+		<input type="radio" name="loglevel" order="12" value="64" checked="checked">
+			64 - Scheduler Calls (recommended, default)
+		</input> <br />
+		<input type="radio" name="loglevel" order="13" value="128">
+			128 - Debug Messages
+		</input> <br />
+		<input type="radio" name="loglevel" order="14" value="256">
+			256 - Extra Debug Messages
+		</input> <br />
+		<input type="radio" name="loglevel" order="15" value="511">
+			511 - Everything On
+		</input> <br />
+		<br />
+		<input type="reset" value='Reset Form' />
+	</form>
+	<hr />
+</body>
+</html>
