[opkg-jobmonarch:scripts] Update scripts for new version which now uses postgress backend. will need tunning.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10032 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: bf6e9db19db2b0a5d578642a0d943606fcd83afe

--- a/packages/jobmonarch/configurator.html
+++ b/packages/jobmonarch/configurator.html
@@ -23,7 +23,7 @@
 		</p>
 
 		<input type="radio" name="drm" order="5" value="sge" >
-			Sun Gridengine
+			Gridengine
 		</input>
 		<br />
 		
@@ -31,9 +31,19 @@
 			PBS
 		</input>
 		<br />
+		
+		<input type="radio" name="drm" order="7" value="slurm">
+			SLURM
+		</input>
+		<br />
+		
+		<input type="radio" name="drm" order="8" value="lsf">
+			LSF
+		</input>
+		<br />
 		<br />
 
-		<input type="checkbox" name="archived" order="7" value="yes">
+		<input type="checkbox" name="archived" order="9" value="yes">
 			Enable Job Monarch's archiving daemon
 		</input>
 		<br />
