[opkg-naemon:configurator.html] replaced <b><pre> with <code> so it is rendered by OSCAR::Tk::HTML
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10720 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 901727c356061440cb4b9dfebb6273ec3adfdcd5

--- a/packages/naemon/configurator.html
+++ b/packages/naemon/configurator.html
@@ -40,7 +40,7 @@ $Id: $
 	<hr/>
 (*)&nbsp;Password are stored in clear text in oscar database. Use a specific password for this occasion and change it after oscar deployment using the following command:<br>
 <br/>
-&nbsp;&nbsp;<b><pre>htpasswd /etc/naemon/htpasswd <i>&lt;admin&gt;</i></pre></b>
+&nbsp;&nbsp;<code>htpasswd /etc/naemon/htpasswd <i>&lt;admin&gt;</i></code>
 <br/>
 where &lt;admin&gt; is the login name you've chosen above.
 </body>
