[opkg-naemon:configurator.html] Added missing "reset form" button.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10721 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 6d1e80f08be21ddce67d4912d17a701228b13826

--- a/packages/naemon/configurator.html
+++ b/packages/naemon/configurator.html
@@ -36,6 +36,7 @@ $Id: $
                         <td>Password&nbsp;confirm&nbsp;(*)</td>
                 </tr>
                 </table>
+                <input type="reset" value='Reset Form' />
 	</form>
 	<hr/>
 (*)&nbsp;Password are stored in clear text in oscar database. Use a specific password for this occasion and change it after oscar deployment using the following command:<br>
