[oscar (all)] Move from oscar_server alias to oscar-server (same for nfs_oscar nad pbs_oscar). TODO: Use OS_Settings to get the alias instead of hard-codded values..
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@11034 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: c29472765fa3168dc90bda3638bda4424485c92b

--- a/packages/squid/configurator.html
+++ b/packages/squid/configurator.html
@@ -11,7 +11,7 @@
 			If your nodes are on a private network that is not routed by head,
 			you need a proxy on head so yum can work on nodes.
 		</p>
-		<input name="visible_hostname" order="5" value="oscar_server">
+		<input name="visible_hostname" order="5" value="oscar-server">
 			Visible hostname
 		</input>
 		<br />
